tests/ui/fail/python_power_operator.stderr
error: Potentially invalid expansion. Expected an identifier, a literal, `if`, a `[`, a `{`, `break`, `return`.
 --> tests/ui/fail/python_power_operator.rs:5:14
  |
5 |         $e * *$e
  |              ^
